# Goblin

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  FUTURE-IDEAS.MD  README.md  check_tor.py  debug_search.py  docker-compose.yml  entrypoint.sh  feedback.md  llm.py  llm_utils.py  main.py  package-lock.json  pyproject.toml  requirements.txt  scrape.py  search.py  start_backend.ps1  start_frontend.ps1  ui.py
.github/workflows/: ci.yml
components/searchbar/: index.html
conductor/: index.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/autopilot_enhancements_20250310/: index.md  plan.md  spec.md
data/: robin.db
docs/: DEPLOYMENT.md
notebooks/: playbook_credential_leak.md  playbook_ransomware.md
src/robin/: __init__.py  __main__.py  auto_pilot.py  blob_store.py  breach_lookup.py  browser_engine.py  cicd_hunter.py  cli.py  config.py  credential_patterns.py  database.py  dedup.py  github_dorking.py  github_search.py  leaklooker_engine.py  llm.py  llm_utils.py  ml_filter.py  paste_scraper.py  robin.db  scheduler.py  scrape.py  search.py  trufflehog_engine.py  ui.py
tests/: test_big_data.py  test_breach_lookup.py  test_credential_patterns.py  test_github_dorking.py  test_integration.py  test_invisible_scraper.py  test_ioc_and_chunking.py  test_ml_filter.py  test_ml_microservice.py  test_paste_scraper.py  test_persistence.py  test_search_parsing.py  test_telegram_handler.py  test_trufflehog_engine.py
web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx
web/styles/: globals.css
(+43 files in other folders)
